--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,10 @@
     padding: 0;
     margin: 0;
 }
+.container {
+    position: relative;
+    z-index: 2;
+}
 body {
     background-color: #040E13;
 }
@@ -9,7 +13,7 @@ body {
     border: 1px solid #222;
     border-radius: 10px;
     padding: 0px 36px;
-    width: 1241px;
+    max-width: 1241px;
     height: 124px;
     background: rgba(4, 14, 19, 0.85);
     padding-left: 36px;
@@ -167,4 +171,165 @@ body {
 }
 .footer > img {
     margin-top: 205px;
+}
+#bg-1 {
+    background-image: url('../public/img/bg-1.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    top: -280px;
+    z-index: 1;
+}
+.header > .btns > .burger {
+    background: url(../public/img/burger.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 0;
+    display: none;
+    width: 37px;
+    height: 28px;
+    margin-top: 7px;
+    margin-left: 26px;
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+    .header > nav {
+        display: none;
+    }
+    .header > .btns > button {
+        display: none;
+    }
+    .header > .btns > .lang {
+        display: block;
+    }
+    .header > .btns > .burger {
+        display: block;
+    }
+}
+@media (min-width: 576px) and (max-width: 991px) {
+    .header {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .header > nav {
+        display: none;
+    }
+    .header > .btns {
+        margin-top: 6px;
+    }
+    .header > .btns > button {
+        display: none;
+    }
+    .header > .btns > .lang {
+        display: block;
+    }
+    .header > .btns > .burger {
+        display: block;
+        margin-left: 5px;
+    }
+    .footer > .items {
+        width: 100%;
+    }
+    .footer > .items > .qr {
+        width: 100%;
+        height: 427px;
+        left: 0;
+        top: 0;
+    }
+    .footer > .items > .bot {
+        width: 100%;
+    }
+    .footer > .items > .item {
+        top: 540px;
+        height: 21%;
+        width: 24%;
+    }
+    .footer > .items > :nth-child(2) {
+        left: 0;
+    }
+    .footer > .items > :nth-child(3) {
+        left: calc(((100% - 96%)/3)+ 24%);
+    }
+    .footer > .items > :nth-child(4) {
+        right: calc(((100% - 96%)/3)+ 24%);
+        left: auto;
+    }
+    .footer > .items > :nth-child(5) {
+        right: 0;
+        left: auto;
+    }
+    .footer > .items > :nth-child(6) {
+        width: 100%;
+        top: 635px;
+        left: 0;
+    }
+    .footer > img {
+        margin-top: 385px;
+    }
+}
+@media (max-width: 575px) {
+    .header {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .header > nav {
+        display: none;
+    }
+    .header > .btns {
+        margin-top: 6px;
+    }
+    .header > .btns > button {
+        display: none;
+    }
+    .header > .btns > .lang {
+        display: block;
+    }
+    .header > .btns > .burger {
+        display: block;
+        margin-left: 5px;
+    }
+    .footer > .items {
+        width: 100%;
+    }
+    .footer > .items > .qr {
+        width: 100%;
+        height: 427px;
+        left: 0;
+        top: 0;
+    }
+    .footer > .items > .bot {
+        width: 100%;
+    }
+    .footer > .items > .item {
+        top: 540px;
+        height: 40%;
+        width: 49%;
+    }
+    .footer > .items > :nth-child(2) {
+        left: 0;
+    }
+    .footer > .items > :nth-child(3) {
+        right: 0;
+        left: auto;
+    }
+    .footer > .items > :nth-child(4) {
+        left: 0;
+        top: 718px;
+    }
+    .footer > .items > :nth-child(5) {
+        right: 0;
+        left: auto;
+        top: 718px;
+    }
+    .footer > .items > :nth-child(6) {
+        width: 100%;
+        top: 895px;
+        left: 0;
+    }
+    .footer > img {
+        margin-top: 700px;
+    }
 }
