--- a/app/sections1-3.css
+++ b/app/sections1-3.css
@@ -1,6 +1,7 @@
 /* 1 */
 #first {
     padding-top: 52px;
+    overflow: hidden;
 }
 #first > h1 {
     font-family: 'Cornerita-Bold';
@@ -43,11 +44,24 @@
     text-align: center;
     color: #fff;
     margin-bottom: 134px;
+    position: relative;
+    z-index: 3;
 }
 #first > .items {
     display: flex;
     justify-content: space-between;
     gap: 14px;
+    animation: appear 1s ease-out;
+}
+@keyframes appear {
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 #first > .items > .item {
     border: 1px solid #1a3f51;
@@ -292,10 +306,231 @@
 }
 #third > .items > .item-1 {
     background: url(../public/img/third_1.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;  
 }
 #third > .items > .item-2 {
     background: url(../public/img/third_2.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 #third > .items > .item-3 {
     background: url(../public/img/third_3.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+@media (min-width: 1200px) and (max-width: 1399px) {
+    #first > .items > .item > .text {
+        margin-left: 5px;
+    }
+    #second > .items > .item > .text {
+        margin-left: 20px;
+    }
+    #third > .items > .item > .text {
+        right: 10px;
+    }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+    #first > .items > .item > .text {
+        margin-left: 20px;
+    }
+    #first > .items {
+        position: relative;
+        width: 944px;
+        height: 414px;
+    }
+    #first > .items > :nth-child(1), #first > .items > :nth-child(2) {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 465px;
+    }
+    #first > .items > :nth-child(1) > .text {
+        left: 163px;
+    }
+    #first > .items > :nth-child(2) > .text {
+        left: 163px;
+    }
+    #first > .items > :nth-child(1) > img {
+        margin-left: 15px;
+    }
+    #first > .items > :nth-child(2) > img {
+        margin-left: 15px;
+    }
+    #first > .items > :nth-child(2) {
+        right: 0;
+        left: auto;
+    }
+    #first > .items > :nth-child(3) {
+        width: 944px;
+        height: 200px;
+        position: relative;
+        top: 214px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    #first > .items > :nth-child(3) > img {
+        margin-left: 266px;
+    }
+    #first > .items > :nth-child(3) > .text {
+        left: 400px;
+    }
+    #second > .items > .item > .text {
+        margin-left: 20px;
+    }
+    #third > .items > .item > .text {
+        right: 45px;
+    }
+    #third > .items {
+        width: 964px;
+        position: relative;
+        height: 414px;
+    }
+    #third > .items > .item-1, #third > .items > .item-2 {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 475px;
+    }
+    #third > .items > .item-2 {
+        left: auto;
+        right: 0;
+    }
+    #third > .items > .item-3 {
+        width: 500px;
+        height: 200px;
+        position: relative;
+        top: 214px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
+@media (max-width: 991px) {
+    #first > button {
+        width: 333px;
+        height: 91px;
+    }
+    #first > .items > .item > .text {
+        margin-left: 20px;
+        width: 205px;
+    }
+    #first > .items {
+        width: 100%;
+        height: 628px;
+        display: block;
+    }
+    #first > .items > :nth-child(1), #first > .items > :nth-child(2), #first > .items > :nth-child(3) {
+        position: relative;
+        width: 100%;
+        display: block;
+        margin-bottom: 14px;
+    }
+    #first > .items > :nth-child(1) > .text {
+        left: 110px;
+    }
+    #first > .items > :nth-child(2) > .text {
+        left: 110px;
+    }
+    #first > .items > :nth-child(3) > .text {
+        left: 110px;
+    }    
+    #first > .items > :nth-child(1) > img {
+        position: relative;
+        margin-left: -230px;
+    }
+    #first > .items > :nth-child(2) > img {
+        position: relative;
+        margin-left: -230px;
+    }
+    #first > .items > :nth-child(3) > img {
+        position: relative;
+        margin-left: -230px;
+    }
+    #second > .items > .item > .text {
+        margin-left: 20px;
+    }
+    #second > .what_is {
+        display: block;
+        width: 100%;
+    }
+    #second > .what_is > img {
+        width: 100%;
+        display: block;
+    }
+    #second > .what_is > .text {
+        width: 100%;
+        display: block; 
+        padding-top: 47px;
+    }
+    #second > .what_is > .text > h2 {
+        width: 350px;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        margin-bottom: 30px;
+    }
+    #second > .what_is > .text > p {
+        width: 320px;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    #second > .items {
+        display: block;
+        width: 100%;
+        height: 1046px;
+    }
+    #second > .items > .item {
+        width: 100%;
+        display: block;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        margin-bottom: 14px;
+    }
+    #second > .items > .item > img {
+        position: relative;
+        margin-left: -230px;
+        width: 72px;
+        height: 72px;
+    }
+    #second > .items > .item > .text {
+        margin-left: -30px;
+        width: 205px;
+    }
+    #second > button {
+        width: 300px;
+        height: 95px;
+    }
+    #third > .items > .item > .text {
+        right: 0px;
+    }
+    #third > .items {
+        width: 100%;
+        position: relative;
+        height: 628px;
+        display: block;
+    }
+    #third > .items > .item-1, #third > .items > .item-2, #third > .items > .item-3 {
+        width: 100%;
+        height: 200px;
+        margin-bottom: 14px;
+    }
+}
+@media (min-width: 567px) and (max-width: 991px) {
+    #first > button {
+        width: 400px;
+        height: 91px;
+    }
+    #second > .items > .item > img {
+        position: relative;
+        margin-left: -300px;
+    }
+    #third > .items > .item > .text {
+        right: 45px;
+    }
 }
