--- a/app/globals.css
+++ b/app/globals.css
@@ -45,6 +45,7 @@ body {
     letter-spacing: 0.1em;
     text-align: center;
     color: #fff;
+    cursor: pointer;
 }
 .header > nav > ul > :nth-child(4) {
     margin-right: 0;
@@ -195,6 +196,88 @@ body {
     margin-top: 7px;
     margin-left: 26px;
 }
+#modal {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    padding: 40px 36px 67px 36px;
+    justify-content: center;
+    backdrop-filter: blur(30px);
+    background: rgba(4, 14, 19, 0.85);
+    z-index: 999;
+}
+#modal > .logo {
+    width: 162px;
+    height: 52px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+#modal > nav {
+    height: 235px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+#modal > nav > ul {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+#modal > nav > ul > li {
+    list-style: none;
+    font-family: 'Cornerita-Regular';
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 155%;
+    letter-spacing: 0.1em;
+    text-align: center;
+    color: #fff;    
+    margin-bottom: 41px;
+    cursor: pointer;
+}
+#modal > nav > ul > :nth-child(4) {
+    margin-right: 0;
+}
+#modal > .btns {
+    display: flex;
+    justify-content: space-between;
+    gap: 7px;
+    width: 40%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 67px;
+    top: auto;
+}
+#modal > .btns > button {
+    width: 43px;
+    height: 43px;
+    border: none;
+    border-radius: 11px;
+    background: #16abff;
+    box-shadow: 0 9px 48px 0 rgba(22, 171, 255, 0.29);
+}
+#modal > .btns > button > a > img {
+    margin-top: -3px;
+}
+#modal > .btns > .lang {
+    background: none;
+    border: 1px solid #fff;
+    border-radius: 11px;
+    padding: 7px 17px;
+    width: 80px;
+    height: 43px;
+    box-shadow: none;
+    font-family: 'Cornerita-Regular';
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 155%;
+    letter-spacing: 0.1em;
+    text-align: center;
+    color: #fff;
+}
 @media (min-width: 992px) and (max-width: 1199px) {
     .header > nav {
         display: none;
@@ -269,6 +352,9 @@ body {
     .footer > img {
         margin-top: 385px;
     }
+    h2 {
+        font-size: 48px !important;
+    }
 }
 @media (max-width: 575px) {
     .header {
@@ -331,5 +417,8 @@ body {
     }
     .footer > img {
         margin-top: 700px;
+    }
+    .footer > h2 {
+        font-size: 48px;
     }
 }
